xrpl-macros/tests/r_address/fail_non_literal.stderr
error: expected string literal
 --> tests/r_address/fail_non_literal.rs:5:16
  |
5 |     r_address!(addr);
  |                ^^^^
